app/assets/stylesheets/levels.css.scss
/* ... */
.history {
  position: fixed;
  top: 23%;
  left: 50%;
  width: 50%;
  transform: translate(-50%, -50%);
  span {
    display: block;
    margin: 5px auto;
    letter-spacing: 10px;
    padding-left: 10px;
  }
  .glyphicon-option-vertical {
    color: #eee;
    padding-left: 20px;
    font-size: 3vh
  }
  .last_0 {
    display: none;
  }
  .last_1 {
    font-size: 4.2vh;
    color: #ccc;
  }
  .last_2 {
    font-size: 3.8vh;
    color: #ddd;
  }
  .last_3 {
    font-size: 3.6vh;
    color: #ececec;
  }
  .last_4 {
    font-size: 3.4vh;
    color: #ededed;
  } 
  .last_5 {
    font-size: 3.4vh;
    color: #eee;
  }
  .last_6 {
    font-size: 3.4vh;
    color: #efefef;
  }

}

.reset, .limit_count {
  position: fixed;
  top: 11vh;
}

.reset {
  right: 5px;
  font-size: 4vh;
  color: #ccc;
  a:active, a:link, a:visited {
    color: #ccc;
  }
  a:hover, .instruction_btn:hover, .music_btn:hover {
    color: var(--main-background-color);
  }
  .instruction_btn, .music_btn {
    cursor: pointer;
  }
}

.limit_count {
  left: 10px;
  color: var(--main-background-color);
  opacity: 0.8;
  .limit_dot {
    width: 4vh;
    height: 5vh;
    text-align: center;
    font-size: 4vh;
    display: block;
  }
  .glyphicon-heart-empty {
    margin-left: -2px;
  }
}

.below_curr_word {
  position: fixed; 
  width: 100%;
}

.definition {
  width: 100%;
  .definition_content {
    padding: 40px;
    max-width: 800px;
    color: var(--definition-color);
    text-align: center;
    font-size: 12px;
    white-space: pre-wrap;
    margin: 0 auto;
  }
}

.no_moves_left {
  width: 100%;
  text-align: center;
  color: var(--main-background-color);
  font-weight: bold;
  font-size: 2.5vh;
}

.message_container {
  display: none;
  //min-height: 100vh;
  width: 100%;
  text-align: center;
  background-color: var(--main-background-color);
  color: var(--main-background-text-color);
  font-size: 2.5vh;
  padding-top: 3vh;
  #well_done {
    font-weight: bold;
    margin: 10px auto;
    margin-top: 5vh;
    font-size: 3vh;
    span {
      margin: 0 5px;
    } 
  }
  #path_length {
    margin: 0 10px;
    font-weight: bold;
    display: none;
  }
  #completed_in {
    font-size: 2.8vh;
    margin-bottom: 3vh;
    display: none;
  }
}

.path_word_container {
  display: none;
  margin-top: 10px;
  margin-bottom: 10px;
  position: relative;
  .path_word {
    font-weight: bold;
    font-size: 5vh;
    margin-bottom: 0px;
    span {
      width: 4vh;
      display: inline-block;
    }
  }
  .path_word:hover + .path_word_definition {
    display: block;
  }
  .path_word_definition {
    color: var(--main-background-text-color);
    text-align: center;
    font-size: 12px;
    max-width: 80vw;
    margin: 0px auto;
    margin-top: 10px;
    margin-bottom: 20px;
    padding-left: 20px;
    padding-right: 20px;
    opacity: 1;
  }
}

.btn_custom {
  background-color: var(--main-background-text-color);
  color: var(--main-background-color);
  font-size: 3vh;
  font-weight: bold;
  margin-bottom: 20px;
  padding: 10px 20px;
  box-shadow: 0px 0px 30px var(--box-shadow-color);
  width: 80%;
  max-width: 250px;
}

.next_level_btn_container {
  display: none;
  margin: 0 auto;
  margin-top: 50px;
  .play_again_link {
    display: block;
    text-decoration: none;
    color: white;
    margin-bottom: 50px;
  }
}

.undo_link, .undo_link:active, .undo_link:hover, .undo_link:link, .undo_link:visited {
  text-decoration: none;
}
.achievement {
  display: none;
  text-shadow: 0px 0px 5px var(--box-shadow-color);
  font-weight: bold;
  margin-top: 30px;
  #achievement_header {
    font-size: 3.5vh;
  }
}

html, body {
  max-width: 100%;
  overflow-x: hidden;
}
iframe {
  position: absolute;
  left: 99999px;
}

#instructions {
  color: #aaa;
  font-size: 2vh;
  text-align: center;
  span {
    font-size: 2.5vh;
    color: var(--main-background-color);
  }
}

.instruction_btn {
  font-weight: bold;
  margin-left: 0.8vh;
}

.level_selection_page, .starting_page {
  background: var(--main-background-color);
  background: -webkit-linear-gradient(left, var(--complete-highlight-color), var(--main-background-color)); /*Safari 5.1-6*/
  background: -o-linear-gradient(right, var(--complete-highlight-color), var(--main-background-color)); /*Opera 11.1-12*/
  background: -moz-linear-gradient(right, var(--complete-highlight-color), var(--main-background-color)); /*Fx 3.6-15*/
  background: linear-gradient(to right, var(--complete-highlight-color), var(--main-background-color)); /*Standard*/
  padding: 20px 0px;
}
/* ... */

